# esp-signalr

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_COMPLETE.md  INTEGRATION_GUIDE.md  Kconfig  QUICKSTART.md  README.md  extract_core_files.ps1  extract_core_files.sh  idf_component.yml
.github/workflows/: publish-to-registry.yml
docs/: ADVANCED_OPTIMIZATION.md  API_COMPARISON.md  AUTO_RECONNECT.md  AUTO_RECONNECT_CN.md  CONFIGURATION_GUIDE.md  FINAL_OPTIMIZATIONS.md  OPTIMIZATION_REPORT.md  PTHREAD_STACK_FIX.md  RECONNECT_IMPLEMENTATION.md  TROUBLESHOOTING.md  TROUBLESHOOTING_CN.md  WEBSOCKET_RECONNECT_FIX.md
docs/examples/: auto_reconnect_example.cpp
include/: esp32_http_client.h  esp32_websocket_client.h  hub_connection_builder.h  json_adapter.h  signalr_client_config.h  websocket_client.h
src/: callback_manager.h  cancellation_token.cpp  cancellation_token_source.cpp  cancellation_token_source.h  connection_impl.cpp  connection_impl.h  default_http_client.h  default_websocket_client.h  handshake_protocol.cpp  handshake_protocol.h  hub_connection.cpp  hub_connection_builder.cpp  hub_connection_impl.cpp  hub_connection_impl.h  json_adapter.cpp  json_helpers.cpp  json_helpers.h  json_hub_protocol.cpp  json_hub_protocol.h  logger.cpp  logger.h  memory_utils.h  messagepack_hub_protocol.h  negotiate.cpp  negotiate.h  signalr_client_config.cpp  signalr_default_scheduler.cpp  signalr_default_scheduler.h  signalr_value.cpp  trace_log_writer.cpp  trace_log_writer.h  transport.cpp  transport.h  transport_factory.cpp  transport_factory.h  url_builder.cpp  url_builder.h  websocket_transport.cpp  websocket_transport.h
src/adapters/: esp32_http_client.cpp  esp32_websocket_client.cpp
